# comp3297

./: .gitignore  .pdm-python  Pipfile  README.md  data_backup.json  db.sqlite3  full_data_backup.json  full_data_backup_no_pks.json  manage.py  pyproject.toml  schema.yml  test_geocoding.py
COMP3297/: asgi.py  settings.py  urls.py  wsgi.py
unihaven/: apps.py  forms.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
unihaven/management/commands/: add_accommodation.py  list_accommodations.py  update_accommodation_geocode.py
unihaven/migrations/: 0001_initial.py  0002_alter_accommodation_geo_address_and_more.py  0003_alter_accommodation_rating.py  0004_rename_contact_info_propertyowner_phone_no_and_more.py  0005_cedarsspecialist_user_hkumember_user_and_more.py  0006_reservation_created_at_reservation_updated_at.py  0007_university_remove_accommodation_specialist_and_more.py  0008_member_specialist_universitylocation_and_more.py  0009_member_user.py  0010_auto_20250428_1723.py  0010_member_contact.py  0011_alter_reservation_created_at_and_more.py  0012_accommodation_building_name.py  0013_remove_member_contact_member_email_and_more.py
unihaven/tests/: test_PropertyOwner.py  test_accommodations.py  test_geocoding.py  test_members.py  test_ratings.py  test_reservations.py  test_specialists.py
unihaven/utils/: geocoding.py  notifications.py
unihaven/views/: __init__.py  auth_views.py  main_views.py
