[project]
name = "comp3297"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "thisisgg", email = "u3622422@connect.hku.hk"},
]
dependencies = [
    "django~=5.1",
    "djangorestframework",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[dependency-groups]
dev = []
